[package]
name = "node"
version = "0.1.0"
authors = ["Raphael Matile <raphael.matile@gmail.com>"]

[dependencies]
bytes = "0.4.9"
env_logger = "0.5.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
uuid = { version = "0.4", features = ["serde", "v4"] }
getopts = "0.2"
rand = "0.3"
log = "0.4"
simple_logger = "0.5"
sha1 = { version = "0.6.0", features = ["std"] }
bincode = "1.0"
crypto-rs = { git = "https://github.com/provotum/crypto-rs.git", branch = "master" }
