[package]
name = "node_rs"
version = "0.2.1"
authors = ["Raphael Matile <raphael.matile@gmail.com>"]
license = "Apache-2.0"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Universal Cast-as-Intended verifiable e-voting on a permissioned blockchain"

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
# documentation = "..."
# homepage = "..."
repository = "https://github.com/provotum/node-rs"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["uciv", "universal cast-as-intended", "e-voting", "blockchain", "node"]

[dependencies]
bytes = "0.4.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
uuid = { version = "0.4", features = ["serde", "v4"] }
clap = "2.26.0"
rand = "0.3"
log = "0.4"
env_logger = "0.5.13"
pretty_env_logger = "0.2"
sha1 = { version = "0.6.0", features = ["std"] }
bincode = "1.0"
num = "0.2.0"
crypto-rs = { git = "https://github.com/provotum/crypto-rs.git", version = "0.1.2" }
